# bootstrap-python-project

./: .gitignore  .pre-commit-config.yaml  README.md  devbox.json  main.py  pyproject.toml
scripts/: example.py  run_staticker.py
src/: hello.py  main.py
test/: test_hello.py  test_tool.py
